manifests/demo.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spinnaker-demo
  namespace: default
  labels:
    source: demo
    stack: frontend
    app: spinnaker
spec:
  replicas: 2
  selector:
    matchLabels:
      source: demo
      app: spinnaker
  template:
    metadata:
      labels:
        source: demo
        app: spinnaker
    spec:
      containers:
      - name: primary
        image: stairsj/spin-kub-v2-demo
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
---

kind: Service
apiVersion: v1
metadata:
  name: spinnaker-demo
  namespace: default
spec:
  selector:
    source: demo
    app: spinnaker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: assortment
  namespace: 360-assortment
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports:  '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/security-groups: jon-eks-alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:793711488495:certificate/4cae3eec-e838-4f5f-bb81-769919b42f23
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2015-05
    alb.ingress.kubernetes.io/tags: Environment=dev
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: spinnaker-demo
            servicePort: 80
